# sanctuary_bot

./: .gitignore  main.py  pyproject.toml  test.txt  todo.txt
cogs/: commands.py  invites.py  music.py  polls.py  tickets.py
ffmpeg-4.3.2-i686-static/: readme.txt
jsons/: greeting.json  leaving.json  poll.json  scheduler.json  usernames.json  wlmsg.json
other/: execlangs.txt  languages.py
