[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
youtube-dl = "^2021.3.3"
PyNaCl = "^1.4.0"
wavelink = "^0.9.9"
captcha = "^0.3"
python-dotenv = "^0.17.1"
aiofiles = "^0.6.0"
praw = "^7.2.0"
googletrans = "^3.1.0a0"
pistonapi = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
